# Tyrne

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.agents/skills/: README.md
.cargo/: config.toml
.claude/skills/: README.md
.github/workflows/: ci.yml
bsp-qemu-virt/: Cargo.toml  build.rs  linker.ld
bsp-qemu-virt/src/: boot.s  console.rs  cpu.rs  exceptions.rs  gic.rs  lib.rs  main.rs  mmu.rs  mmu_bootstrap.rs  vectors.s
docs/: README.md  glossary.md
docs/analysis/: README.md
docs/architecture/: README.md  boot.md  exceptions.md  hal.md  ipc.md  memory-management.md  overview.md  scheduler.md  security-model.md  task-loader.md
docs/audits/: unsafe-log.md
docs/decisions/: 0001-microkernel-architecture.md  0002-implementation-language-rust.md  0003-license-apache-2.md  0004-target-platforms.md  0005-documentation-language-english.md  0008-cpu-trait.md  0009-mmu-trait.md  0011-irq-controller-trait.md  0012-boot-flow-qemu-virt.md  0013-roadmap-and-planning.md  0015-ai-integration-stance.md  0016-kernel-object-storage.md  0017-ipc-primitive-set.md  0019-scheduler-shape.md  0021-raw-pointer-scheduler-ipc-bridge.md  0022-idle-task-and-typed-scheduler-deadlock.md  0023-cross-table-capability-revocation-policy.md  0024-el-drop-policy.md  0025-adr-governance-amendments.md  0026-idle-dispatch-fallback.md  0027-kernel-virtual-memory-layout.md  README.md  (+5 more)
hal/: Cargo.toml
kernel/: Cargo.toml
kernel/src/: lib.rs
kernel/src/cap/: mod.rs  rights.rs  table.rs
kernel/src/ipc/: mod.rs
kernel/src/mm/: address_space.rs  mod.rs  pmm.rs
kernel/src/sched/: mod.rs
test-hal/: Cargo.toml
test-hal/src/: cpu.rs  irq_controller.rs  lib.rs  mmu.rs  timer.rs
tools/: perf-harness.sh  run-qemu.sh
(+132 files in other folders)
