[package]
name = "umbrix-bsp-qemu-virt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Umbrix BSP for QEMU aarch64 virt machine (primary development target)."
build = "build.rs"

[[bin]]
name = "umbrix-bsp-qemu-virt"
path = "src/main.rs"

[dependencies]
umbrix-hal = { path = "../hal" }
umbrix-kernel = { path = "../kernel" }

[lints]
workspace = true
