[package]
name = "umbrix-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Umbrix capability-based microkernel core (architecture- and board-agnostic)."

[lib]
name = "umbrix_kernel"

[dependencies]
umbrix-hal = { path = "../hal" }

[dev-dependencies]
umbrix-test-hal = { path = "../test-hal" }

[lints]
workspace = true
